add_subdirectory(libxmount_input_dd)

if(NOT STATIC_EWF)
  find_package(LibEWF)
  if(LIBEWF_FOUND)
    add_subdirectory(libxmount_input_ewf)
  endif(LIBEWF_FOUND)
else(NOT STATIC_EWF)
  add_subdirectory(libxmount_input_ewf)
endif(NOT STATIC_EWF)

if(NOT STATIC_AFF)
  find_package(LibAFF)
  find_package(OpenSSL)
  if(LIBAFF_FOUND AND OPENSSL_FOUND)
    add_subdirectory(libxmount_input_aff)
  endif(LIBAFF_FOUND AND OPENSSL_FOUND)
else(NOT STATIC_AFF)
  add_subdirectory(libxmount_input_aff)
endif(NOT STATIC_AFF)

#find_package(LibZ)
#if(LIBZ_FOUND)
#  add_subdirectory(libxmount_input_aewf)
#  add_subdirectory(libxmount_input_aaff)
#endif(LIBZ_FOUND)

